# EUID

./: .gitignore  Cargo.toml  README.md  build.sh
benches/: euid_create.rs  euid_create_with_extension.rs
examples/: Cargo.toml  main.rs
examples/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: euid_create_with_extension.rs  from_str.rs  with_epoch.rs  with_epoch_and_shard_id.rs  with_shard_id.rs
src/: base32.rs  check.rs  lib.rs  random.rs  time.rs
src/rust/: euid.rs  lib.rs  random.rs
tests/: tests.rs
tests/rust/: euid_test.rs
