[package]
name = "euid"
version = "0.1.0"
description = "Reference implementation for EUID"
author = "Ardika Rommy Sanjaya <contact@ardikars.com>"
license = "MIT"
edition = "2021"
homepage = "https://github.com/ardikars/euid"

[dependencies]
getrandom = "0.2"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[lib]
name = "euid"
crate-type = ["rlib"]
path = "src/lib.rs"
edition = "2021"

[features]
default  = ["checkmod_128"]
checkmod_128 = []
checkmod_64 = []

[[bin]]
name = "euid_toys"
path = "examples/main.rs"

[[bench]]
name = "euid_create"
harness = false

[[bench]]
name = "euid_create_with_extension"
harness = false