[package]
name = "euid"
version = "0.1.5"
edition = "2018"
description = "Reference implementation for EUID"
authors = ["Ardika Rommy Sanjaya <contact@ardikars.com>"]
categories = ["encoding"]
keywords = ["euid"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ardikars/euid"
repository = "https://github.com/ardikars/euid"
documentation = "https://docs.rs/uuid"

[dependencies]
getrandom = "0.2"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[lib]
name = "euid"
crate-type = ["rlib"]
path = "src/lib.rs"
edition = "2018"

[features]
default  = ["std"]
std = []
# reference implementation for language that doesn't support 128 bit integer natively.
euid_64 = []
# reference implementation for non binary base32 encoding
non_binary = []

[[bench]]
name = "euid_create"
harness = false

[[bench]]
name = "euid_create_with_extension"
harness = false