[package]
name = "euid-toys"
version = "0.1.6"
description = "Reference implementation for EUID"
authors = ["Ardika Rommy Sanjaya <contact@ardikars.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/ardikars/euid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euid = "0.1.6"
