[package]
name = "euid-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.euid]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "from_str"
path = "fuzz_targets/from_str.rs"
test = false
doc = false

[[bin]]
name = "with_epoch_and_shard_id"
path = "fuzz_targets/with_epoch_and_shard_id.rs"
test = false
doc = false

[[bin]]
name = "with_epoch"
path = "fuzz_targets/with_epoch.rs"
test = false
doc = false

[[bin]]
name = "with_shard_id"
path = "fuzz_targets/with_shard_id.rs"
test = false
doc = false
