[package]
name = "euid-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"


[dependencies.euid]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "euid_create_with_extension"
path = "fuzz_targets/euid_create_with_extension.rs"
test = false
doc = false
